--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,9 +24,8 @@ h1 {
 	transition: all ease-in-out 300ms;
 	border-radius: 10px;
 	position: relative;
-	padding: 20px 25px;
+	padding: 5px 10px;
 	font-weight: 900;
-	letter-spacing: 5px;
 	text-align: center;
 	z-index: 2;
 
@@ -37,13 +36,12 @@ h1 {
 		left: -2px;
 		right: -2px;
 		bottom: -2px;
-		background: linear-gradient(to right, #f7fee7, #a3e635);
+		background: linear-gradient(to bottom right, #f7fee7, #a3e635);
 		border-radius: 8px;
 		z-index: -1;
 	}
 
 	&:hover {
-		scale: 110%;
 		border: 1px solid white;
 		color: transparent;
 		background: linear-gradient(to right, #f7fee7, #a3e635);
